--- a/Portafolio/ejemplos/index.html
+++ b/Portafolio/ejemplos/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git</title>
+    <title>Document</title>
 </head>
-
 <body>
-    <h1>Experimento</h1>
-</body>
-<footer>
-    <P>Este es un Experimento</P>
-</footer>
 
+    <h1>
+        Aprendiendo javascript rapido
+    </h1>
+    <p>Hola soy franco caballero</p>
+    <div id="datos"></div>
+
+
+    <script src="main.js">
+    </script>
+</body>
 </html>
